--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
-<html lang="ja">
-<head>
-<meta charset="UTF-8">
-<title>サンプルページ</title>
-</head>
-<body>
-<h1>こんにちは、世界！</h1>
-<p>これはサンプルページです！</p>
-</body>
+<html>
+  <head>
+    <title>Leafletで国土地理院ベクトルタイルを表示</title>
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
+      integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI="
+      crossorigin=""
+    />
+    <script
+      src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
+      integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
+      crossorigin=""
+    ></script>
+    <script src="https://unpkg.com/leaflet.vectorgrid@latest/dist/Leaflet.VectorGrid.bundled.js"></script>
+  </head>
+  <body>
+    <div id="map" style="width: 100%; height: 600px"></div>
+    <script src="./index.js"></script>
+  </body>
 </html>
