--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="https://unpkg.com/leaflet.vectorgrid@latest/dist/Leaflet.VectorGrid.bundled.js"></script>
   </head>
   <body>
-    <div id="map" style="width: 100%; height: 600px"></div>
+    <div id="map" style="width: 100%; height: 100%"></div>
     <script src="./index.js"></script>
   </body>
 </html>
