--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <header>
-      <h1 class="title">八代市小字図</h1>
+      <h1 class="title_koaza">八代市小字図</h1>
     </header>
     
     <div id="map" style="width: 100%; height: 100%"></div>
