--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <script src="https://unpkg.com/leaflet.vectorgrid@latest/dist/Leaflet.VectorGrid.bundled.js"></script>
   </head>
   <body>
-    <header>
-      <h1 class="title">八代市小字図</h1>
+    <header class="onegai">
+      <h1>八代市小字図</h1>
     </header>
     
     <div id="map" style="width: 100%; height: 100%"></div>
