--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>八代市小字図が代</title>
+    <title>八代市小字図</title>
     <link
       rel="stylesheet"
       href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
@@ -18,7 +18,7 @@
   </head>
   <body>
     <header class="onegai">
-      <h1>八代市小字図</h1>
+      <h1>八代市小字図だお</h1>
     </header>
     
     <div id="map" style="width: 100%; height: 100%"></div>
