--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="https://unpkg.com/leaflet.vectorgrid@latest/dist/Leaflet.VectorGrid.bundled.js"></script>
   </head>
   <body>
-    <header class="onegai">
+    <header>
       <h1>八代市小字図</h1>
     </header>
     
