--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
   </head>
   <body>
     <header>
-      <h1>八代市小字図</h1>
+<!--       <h1>八代市小字図</h1> -->
+      <img src="logo.png" alt="ロゴ">
     </header>
     
     <div id="map" style="width: 100%; height: 100%"></div>
