--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
   </head>
   <body>
     <header>
-<!--       <h1>八代市小字図</h1> -->
-      <img id="logo" src="logo.png" alt="ロゴ">
+    <!--       <h1>八代市小字図</h1> -->
+      <div id="logo">
+        <img src="logo.png" alt="ロゴ">
+      </div>
     </header>
     
     <div id="map" style="width: 100%; height: 100%"></div>
