--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
   <body>
     <header>
     <!--       <h1>八代市小字図</h1> -->
-      <div id="logo">
-        <img src="logo.png" alt="ロゴ">
-      </div>
+      <img id="logo" src="logo.png" alt="ロゴ">
     </header>
     
     <div id="map" style="width: 100%; height: 100%"></div>
