--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body>
     <header>
     <!--       <h1>八代市小字図</h1> -->
-      <img id="logo" src="logo.png" alt="ロゴ">
+      <img id="logo" src="logo.png" alt="ロゴ" width="100%">
     </header>
     
     <div id="map" style="width: 100%; height: 100%"></div>
