--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI=" crossorigin="" />
 
   <!-- css 読み込み -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="sample.css">
 
   <!-- Google fonts 読み込み -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
